Set the issue description text to pre-wrap and use CSS instead of inline style.
On behalf of estade@chromium.org.

BUG=https://code.google.com/p/rietveld/issues/detail?id=500

--- a/static/styles.css
+++ b/static/styles.css
@@ -974,4 +974,10 @@ input:checked ~ span .if_checked {
   display: block;
   font-weight: bold;
 }
-  
+
+#issue-description {
+  font-family: monospace;
+  font-size: 12px;
+  margin-left: 15px;
+  white-space: pre-wrap;
+}
